outputs/csi500-test/treevoo/2025-07-28_01-48-35/problem_iter15_response2.txt_stdout.txt
Traceback (most recent call last):
  File "/home/renjunji_2023/reevo/problems/csi500/eval.py", line 9, in <module>
    import gpt
  File "/home/renjunji_2023/reevo/problems/csi500/gpt.py", line 37
    df['True_Range'] = df[['high' - df['low'].shift(1)].abs(), (df['high'] - df['close'].shift(1)).abs(), (df['low'] - df['close'].shift(1)).abs()]].max(axis=1)
                                                                                                                                                   ^
SyntaxError: unmatched ']'
